--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@ngneat/tailwind": "^7.0.3"
+   
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.3",
@@ -34,6 +38,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tailwindcss": "^2.2.19",
     "typescript": "~4.4.3"
   }
 }
